@@ -593,6 +593,13 @@ void goptions::setGoptions()
 	optMap["FILTER_NULL_VARIABLES"].type = 0;
 	optMap["FILTER_NULL_VARIABLES"].ctgr = "output";
 
+	// voltage versus time resolution, in ns
+	optMap["FILTER_HITS"].arg = 0;
+	optMap["FILTER_HITS"].help = "If set to 1, do not write output if there are no hits in the detectors";
+	optMap["FILTER_HITS"].name = "If set to 1, do not write output if there are no hits in the detectors";
+	optMap["FILTER_HITS"].type = 0;
+	optMap["FILTER_HITS"].ctgr = "output";
+
 	// sampling time of electronics (typically FADC), and number of sampling / event
 	// the VT output is sampled every TSAMPLING nanoseconds to produce a ADC
 	// the default number of samples is 500 ADC points, at 4ns intervals (total electronic event time = 2 microseconds)
